[tool.poetry]
name = "senkalib"
version = "0.2.4"
description = ""
authors = ["settler"]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.8.1"
web3 = "^5.29.0"
pandas = "^1.4.2"
bscscan-python = "^2.0.0"




[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pre-commit = "^2.17.0"
pytest = "^7.0.1"
pytest-cov = "^3.0.0"
pytest-mock = "^3.7.0"
pyright = "^1.1.227"
black = "^22.1.0"
isort = "^5.10.1"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

